src/main/default/objects/eForm_Config__c/eForm_Config__c.object-meta.xml
<CustomObject>
    <label>eForm Config</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>eForm Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eForm Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>