src/main/default/objects/eForm_Config__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer for which the FX Form is available. If no customer is specified, the FX Form is available for every customer.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>eForm Configs</relationshipLabel>
    <relationshipName>eForm_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>