src/main/default/objects/eForm_Config__c/fields/eForm_SObject__c.field-meta.xml
<CustomField>
    <fullName>eForm_SObject__c</fullName>
    <inlineHelpText>API name of the FX Form object. You must make an entry in this field.</inlineHelpText>
    <label>eForm SObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>