src/main/default/objects/eForm_Config__c/fields/eForm_SObject_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>eForm_SObject_Record_Type__c</fullName>
    <inlineHelpText>FX Form record type for which the FX Form is available. If no record type is specified, the FX Form is available for every record type.</inlineHelpText>
    <label>eForm SObject Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>