src/main/default/objects/eForm_Config__c/fields/eForm_SObject_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>eForm_SObject_Record_Type_Id__c</fullName>
    <inlineHelpText>Unique identifier for the record type specified in the "eForm SObject Record Type" field.</inlineHelpText>
    <label>eForm SObject Record Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>