src/main/default/objects/eForm_Config__c/fields/Key_SObject__c.field-meta.xml
<CustomField>
    <fullName>Key_SObject__c</fullName>
    <inlineHelpText>API name of the object for which the FX Form is available. You must make an entry in this field.</inlineHelpText>
    <label>Key SObject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FX5__Job__c</fullName>
            </value>
            <value>
                <fullName>FX5__Ticket__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>