src/main/default/objects/eForm_Config__c/fields/Key_SObject_Field__c.field-meta.xml
<CustomField>
    <fullName>Key_SObject_Field__c</fullName>
    <label>Key SObject Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>