src/main/default/objects/eForm_Config__c/fields/Key_SObject_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Key_SObject_Record_Type__c</fullName>
    <inlineHelpText>Record type for which the FX Form is available. If no record type is specified, the FX Form is available for every record type.</inlineHelpText>
    <label>Key SObject Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Field_Ticket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>