src/main/default/objects/eForm_Config__c/fields/Key_SObject_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Key_SObject_Record_Type_Id__c</fullName>
    <inlineHelpText>Unique identifier for the record type specified in the "Key SObject Record Type" field.</inlineHelpText>
    <label>Key SObject Record Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>