src/main/default/objects/eForm_Config__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Office for which the FX Form is available. If no office is specified, the FX Form is available for every office.</inlineHelpText>
    <label>Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>eForm Configs (Office)</relationshipLabel>
    <relationshipName>eForm_Configs1</relationshipName>
    <type>Lookup</type>
</CustomField>