src/main/default/objects/eForm_Config__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Price_Book__c</referenceTo>
    <relationshipLabel>eForm Configs</relationshipLabel>
    <relationshipName>eForm_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>