src/main/default/objects/eForm_Config__c/fields/Required_On_Create__c.field-meta.xml
<CustomField>
    <fullName>Required_On_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required on Create</label>
    <type>Checkbox</type>
</CustomField>