src/main/default/objects/eForm_Config__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number used to determine the order in which the FX Form displays on the sidebar of the Add New Form page in FieldFX Mobile. The Add New Report page sorts FX Forms first by sequence number and then by FX Form name.</inlineHelpText>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>